fix for text spacing in word cloud

--- a/src/css/TextSphere.css
+++ b/src/css/TextSphere.css
@@ -3,7 +3,7 @@
   position: relative;
   top: 0;
   width : 100%;
-  height : 100vh;
+  height : 40vh;
   display: flex;
   justify-content : center;
   align-items: center ;
@@ -15,7 +15,7 @@
  font-family : 'Arial', ' sans-serif';
 font-weight : 600;
 letter-spacing : 0.0625em;
-font-size: 2.0em;
+font-size: 3.0em;
 
 }
 
