--- a/src/css/spinner.css
+++ b/src/css/spinner.css
@@ -1,19 +1,23 @@
 .spinner-container {
- width: 150px;
- height: 150px;
+display: block;
+    margin-left: auto;
+    margin-right: auto;
+ width: 120px;
+ height: 120px;
  position: relative;
  margin: 30px auto;
  overflow: hidden;
 }
 
 .spinner {
+
  position: absolute;
  width: calc(100% - 9.9px);
  height: calc(100% - 9.9px);
  border: 5px solid transparent;
  border-radius: 50%;
  border-top-color: #fff;
- animation: spin 5s cubic-bezier(0.17, 0.49, 0.96, 0.79) infinite;
+ animation: spin 3s cubic-bezier(0.17, 0.49, 0.96, 0.79) infinite;
 }
 
 @keyframes spin {
